bootstrap/QinHao/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
  - name: hello-world
    image: ealen/echo-server:latest
    ports:
    - containerPort: 8000
